# svgedit

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EMBED_API.md  README.md  SECURITY.md  STYLE.md  THEMING.md  THIRD-PARTY-NOTICES.md  eslint.config.js  package-lock.json  package.json  playwright.config.mjs  tsconfig.embed.json  tsconfig.emit-base.json  tsconfig.json  tsconfig.server.json  vite.config.mjs
.github/: dependabot.yml
.github/workflows/: browser-canary.yml  ci.yml  dependabot-auto-merge.yml  launcher.yml  scorecard.yml
docs/: AUDIT_2026-05-16.md
docs/tutorials/: CanvasAPI.md  ConfigOptions.md  Editor.md  EditorAPI.md  Events.md  ExtensionDocs.md  FrequentlyAskedQuestions.md  LocaleDocs.md
launcher/: Cargo.toml  build.rs
launcher/.cargo/: config.toml
launcher/docs/: dev-smoke.md
launcher/src/: browser.rs  config.rs  hooks.rs  install_acl.rs  job_object.rs  log.rs  main.rs  paths.rs  single_instance.rs  spawn.rs  supervisor.rs  widestr.rs
scripts/: build-extensions.mjs  build-extensions.ts  check-no-raw-hex.mjs  copy-static.mjs  copy-static.ts  icon-contact-sheet.mjs  run-e2e.mjs  run-e2e.ts
src/editor/: ConfigObj.js  ConfigObj.ts  DocumentIO.ts  Editor.js  Editor.ts  EditorSelection.ts  EditorStartup.js  EditorStartup.ts  ExportManager.ts  MainMenu.js  MainMenu.ts  Rulers.ts  UICoordinator.ts  contextPanel.ts  contextmenu.ts  editorInit.ts  elix.d.ts  foreignHtml.ts  global-dialogs.d.ts  (+10 more)
tests/: locale.test.ts  svg-editor-global.d.ts  test-globals.d.ts  tsconfig.json
(+371 files in other folders)
