[package]
name = "svgedit"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/bilbospocketses/svgedit"
publish = false

[[bin]]
name = "svgedit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
velopack = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
